<resources>
    <string name="app_name">המכללה הטכנולוגיסטית</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">הגדרות</string>
    <string name="tna">המכללה הטכנולוגיסטית</string>
    <string name="slogen">זורעים היום את הפתרון של מחר</string>
    <string name="courses_info">מידע קורסים</string>
    <string name="share">שתף</string>
    <string name="about_us">לוגיטק - המכללה הטכנולוגיסטית</string>
    <string name="comunication">צור קשר</string>
    <string name="facebookpage">דף הפייסבוק</string>

    <string-array name="megamot">
        <item>מגמת מכונות</item>
        <item>מגמת רכב</item>
        <item>מגמת אלקטרוניקה</item>
        <item>מגמת חשמל</item>
        <item>מגמת תו\"ן</item>
    </string-array>


    <string name="segel" translatable="false">סגל</string>
    <string name="malshabim" translatable="false">סביבת מתגייסים</string>
    <string name="mktzoalhaim" translatable="false">מקצוע לחיים</string>
    <string name="mala" translatable="false">מל\"ה</string>


    <string name="telephon_number">מספר טלפון:</string>
    <string name="main_screen">מסך ראשי</string>
    <string name="fax">פקס:</string>
    <string name="email">דוא\"ל:</string>
    <string name="thevisiontitle">theVisionTitle</string>

    <string name="about_us_discription_text" translatable="false">
        <![CDATA[
       <u> <h2>חזון המכללה הטכנו-לוגיסטית</h2>
       </u>

                <hr>
          <br/>המרכז הטכנולוגיסטי למנהיגות והכשרה בעידן היבשה החדשה
          <br/>
          <br/>יהווה מודל ראשוני ופורץ דרך
          <br/>
          <br/>לחדשנות
          <br/>
          <br/>בתחומי &quot הלמידה המשמעותית&quot
          <br/>
          <br/>הנדרשת למקצועות המחר
          <br/>
          <br/>במציאות טכנולוגית משתנה.
          <br/>
          <br/>המרכז יכשיר יסמיך ויעצים מלש"בים, חיילים ומפקדים,
          <br/>
          <br/>וישמש אבן שואבת לכוח אדם ייחודי ואיכותי,
          <br/>
          <br/>אשר יהוו את שדרת הפיקוד העתיד בצבא הגנה לישראל.
          <br/>
          <br/>
          <br/>


          ]]>
</string>
    <string name="weakly_photo" translatable="false">תמונת השבוע</string>
    <string-array name="about_us_discription_text_vision_path">

        <item>שימוש בפדגוגיה ומתודולוגיה חדשנית לחיבור רב תחומי וממדי לצמצום הפערים בין דרכים והיבטים אנושיים לטכנולוגיה</item>
        <item>פיתוח חשיבה מערכתית יצירתית מסתעפת ואינטגרטיבית</item>
        <item>שילוב ערכים כישורים ומיומנויות ויכולות כחלק בלתי נפרד מתחומי הדעת ומקצועות הלימוד</item>
        <item>הטמעת וביסוס התנסות חינוכית משמעותית אינטראקטיבית וחוויתית באמצעות למידה מבוססת פרויקטים P.B.L</item>
        <item>חיזוק והעצמת תחומי מנהיגות הפיקוד וזהות חילית</item>

    </string-array>

    <string name="whatsnew">מה חדש?</string>
    <string name="mail_address" translatable="false">technology.idf@gmail.com</string>
    <string name="phone_number" translatable="false">*9626</string>
    <string name="appinfo">appinfo</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="whatsneTitle" translatable="false"><u>מה חדש?</u></string>
    <string name="weekly_photo"></string>
    <string name="hachshara_info">מסלול המיועד לחיילים המשרתים בתפקידים בחילות אט"ל, החיילים יזכו להשתלב בהכשרה על פי בחירתם עד כ-3 חודשים טרם שחרורם מצה"ל ועד לקבלת התעודה במידה ומפקדיהם ימליצו עליהם לתכנית בזכות הובלה עשייה ונתינה מעבר לנדרש בתפקיד.
בשיתוף עם הקרן להכוונת חיילים משוחררים ומשרד הכלכלה.
        \n\n
המסלול כולל:\n
•	תחילת לימודי המקצוע עד כ- 3 חודשים טרם השחרור ועד לקבלת התעודה
        \n  \n
•	מימון שכר לימוד חלקי או מלא
        \n  \n
•	סיוע בהשמה או במציאת מקום עבודה
        \n  \n
•	השתתפות בדמי כלכלה ונסיעות עד מועד השחרור
רשימת מכללות: לשים את התמונות שהעברתי לקורסים של צפון,מרכז,דרום

       \n  \n \n
מסלול הכשרות בוטיק- מסלול הכשרות ייעודיות לתעשייה. יצירת הכשרות מכוונות לחברות בתעשייה ובהייטק בהתאם לאפיון העובד המיועד לקליטה בחברה.
רוצים גם? לפרטים "מוקד חיל הטכנולוגיה והאחזקה" 9626*
ובעמוד צור קשר
</string>

    <string name="haasaka_info">
המסלול מיועד לחיילי המערך הטכני לבוגרי כיתות י"ג-י"ד ולנהגים המתגייסים לשירות בחיל הטכנולוגיה והאחזקה והלוגיסטיקה. במסלול זה זכאי החייל לצאת לחודש עבודה בחברה אזרחית על כל שנת שירות, בדרך זו צובר החייל ניסיון מקצועי וקשרי עבודה לקראת היציאה לאזרחות.
*עבור נהגים - החל מהשנה השנייה לשירות.
        \n\n
        רוצים גם? לפרטים "מוקד חיל הטכנולוגיה והאחזקה" 9626*
ובעמוד צור קשר
    </string>
    <string name="hacsharot_title_info">מסלול הכשרות</string>
    <string name="haasaka_title_info">מסלול העסקה</string>
    <string name="maavarim_info">מרכז "מעברים" הינו מרכז השמה אשר יסיע ויקשר בין אנשי הקבע משתחררים ו\או פורשים, בוגרי חילות אט"ל בסלילת דרכם המקצועית, ובמציאת משרות תעסוקה להשמה רלוונטיות בחברות אזרחיות במגוון תפקידי מפתח בחברות מובילות במשק ובתעשייה הישראלית.  המרכז יקיים ירידים חד שנתיים, הפניית המועמדים לחברות, ע"פ קורות החיים ורצונם, פרסום משרות עפ"י המקצועות השונים.
הקמת המרכז מאפשרת הזדמנויות נרחבות לקריירה במגוון תחומים בהתאם לרקע ההשכלתי, המקצועי ולשאיפות האישיות של השחרור.
\n
להגשת קורות חיים יש לבחור כאן בלשונית מעברים ולבחור את המשרה המועדפת.
    \n
 לבירורים נוספים ניתן לתקשר עם "מוקד חיל הטכנולוגיה והאחזקה" בעמוד צור קשר
    </string>
</resources>
