<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_horizontal"
    android:baselineAligned="false"
    >


    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/comunicate"
        android:layout_margin="3dp"
        android:elevation="5dp"
        android:text="תמונה מתאימה"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@drawable/shadow"
        android:id="@+id/imageView2"
        android:padding="1dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="293dp">

                <ImageButton
                    android:id="@+id/phone_number_button"
                    style="@style/comunicate_button"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="13dp"
                    android:padding="10dp"
                    android:src="@android:drawable/ic_menu_call"
                    android:text="@string/phone_number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"

                    android:layout_alignParentStart="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/telephon_number"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button3"
                    style="@style/comunicate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/phone_number_button"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="52dp"
                    android:text="03-7377262" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/button3"
                    android:layout_alignBottom="@+id/button3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/fax"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/button3"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/email"
                    android:textColor="@color/mainTextColor"
                    android:textSize="20sp" />


                <ImageButton
                    android:id="@+id/email_button"
                    style="@style/comunicate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView3"
                    android:layout_alignBottom="@+id/textView3"
                    android:layout_alignParentEnd="true"

                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="13dp"
                    android:padding="10dp"
                    android:src="@android:drawable/ic_dialog_email"
                    android:text="@string/mail_address"
                    android:textAllCaps="false" />
            </RelativeLayout>



        </LinearLayout>

    </ScrollView>
</LinearLayout>